experimental/ir/testdata/extend/message_set_proto3.proto.stderr.txt
error: extension ranges are not permitted in proto3
  --> testdata/extend/message_set_proto3.proto:21:5
   |
21 |     extensions 1 to max;
   |     ^^^^^^^^^^^^^^^^^^^^

encountered 1 error
